@@ -172,6 +172,12 @@
 				android:key="PrivacyClearCookies" />
 		</PreferenceScreen>		
 	</PreferenceCategory>
+	<PreferenceCategory android:title="@string/PreferencesActivity.MobileViewCategoryTitle">
+		<Preference
+			android:title="@string/PreferencesActivity.MobileViewListPreferenceTitle"
+			android:summary="@string/PreferencesActivity.MobileViewListPreferenceSummary"
+			android:key="MobileViewList" />
+	</PreferenceCategory>
 	<PreferenceCategory android:title="@string/PreferencesActivity.AdBlockerSettingsCategoryTitle">
 		<CheckBoxPreference
 			android:title="@string/PreferencesActivity.EnableAdBlockerPreferenceTitle"
